@@ -1,4 +1,4 @@
-<configuration debug="true">
+<configuration scan="true">
     <if condition='property("os.name").toUpperCase().startsWith("WIN")'>
         <then>
             <property name="LOG_FILE" value="${APPDATA}\\Coinffeine\\Coinffeine.log" />
