@@ -1,4 +1,5 @@
 v0.3.0:
+ - Load logging configuration from an external file
  - Bug fixing
    * Wait for connection attempts to complete before shutting down the app
 
